--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Hello-World",
   "version": "1.0.0",
-  "description": "this program writes hello",
+  "description": "this program generates a poem",
   "main": "node server",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
