--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ZAch12342/Hello-World",
   "dependencies": {
+    "knock-knock-jokes": "^1.7.0",
     "poemify": "^1.1.1",
     "txtgen": "^1.0.8"
   }
